crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__block_empty_statement_adjacent_braces.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun demo() {
  ;
}

diagnostics:
(none)
