crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_all_use_site_target.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AllTarget(
  @all:Label("user") val name: String,
)

annotation class Label(val value: String)

diagnostics:
(none)
