crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_delegate_and_setparam_targets.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
annotation class Mark(val value: String = "")

class TargetedAnnotations {
  @delegate:Mark("lazy")
  val cached: String by lazy { "ready" }

  @set:Mark("setter")
  @setparam:Mark("value")
  var name: String = ""
}

diagnostics:
(none)
