crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_type_use_and_receiver.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun @receiver:ReceiverMark String.trimmed(): @TypeMark String = trim()

annotation class ReceiverMark

annotation class TypeMark

diagnostics:
(none)
