crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_use_site_targets.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class UseSiteTargets(
  @param:Marker val id: String,
  @field:Marker @get:Marker val name: String,
  @property:Marker var enabled: Boolean,
)

annotation class Marker

diagnostics:
(none)
