crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_with_arguments_and_array.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@Route(path = "/items", methods = ["GET", "POST"])

class AnnotatedRoute

annotation class Route(
  val path: String,
  val methods: Array<String>,
)

diagnostics:
(none)
