crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_assignment_compound_operators.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun compoundAssignment(counter: Counter, values: MutableList<Int>) {
  var total = 0
  total += counter.next()
  total -= 1
  total *= 2
  total /= 3
  total %= 4
  values[0] += total
}

diagnostics:
(none)
