crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_assignment_left_hand_side_forms.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun assignmentTargets(target: Target, index: Int, value: String) {
  target.name = value
  target[index] = value
  target.child!!.name = value
  target.items[index].label = value
}

fun postfixAssignmentTargets(
  clauses: MutableList<String>?,
  target: Target,
  index: Int
) {
  clauses!! += "element"
  clauses!! -= "element"
  target.items[index]!! += target
}

diagnostics:
(none)
