crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_bare_type_argument_comparison.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val comparison = a<b> > c

diagnostics:
(none)
